работаю над таблеткой

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,6 +32,14 @@
             
         </a>
 
+
+        <button class="btn__order-tabl" type="button">
+            <span class="btn__title-tabl">Buy now</span>
+            <svg class="btn__order-icon-tabl">
+                <use href="./images/about/about-sprite.svg#icon-Vector-1"></use>
+            </svg>
+        </button>
+
         <button type="button" class="burger__btn" data-menu-button>
             <svg class="burger__btn icon_btn" >
                 <use href="./images/sprite-head.svg#brg-menu"></use>
@@ -47,7 +55,10 @@
     </button>
 
     <button class="btn__order" type="button">
-        <span class="btn__order btn__title">Buy now</span>
+        <span class="btn__title">Buy now</span>
+        <svg class="btn__order-icon">
+            <use href="./images/about/about-sprite.svg#icon-Vector-1"></use>
+        </svg>
     </button>
 
     <ul class="mobile__menu__nav list">
