--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,25 +1,4 @@
-@media screen and (max-width: 767px) {
-
-.header .container  {
-    width: 100%;
-    height: 56px;
-    // padding-top: 6px;
-    padding: 6px 20px 0;
-
-    background-color: skyblue;
-    // background-color: transparent;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-// path {
-//     fill: inherit;
-//    }
-
 .burger__btn {
-
 
     width: 20px;
     height: 12px;
@@ -42,9 +21,123 @@
     }
 }
 
-.logo__link {
+  // убрал подчеркивание ссылки У СЕБЯ
+  .logo {
+width: 199px;
+height: 50px;
+
     text-decoration: none;
+
 }
 
+
+@media screen and (max-width: 767px) {
+
+.header .container  {
+    width: 100%;
+    height: 56px;
+    // padding-top: 6px;
+    padding: 6px 20px 0;
+
+    background-color: skyblue;
+    // background-color: transparent;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+// path {
+//     fill: inherit;
+//    }
+
+// .burger__btn {
+
+//     width: 20px;
+//     height: 12px;
+
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+
+//     padding: 0;
+//     border: 0;
+//     background-color: transparent;
+// /// Переделать бургер меню СЕЙЧАС Fill задается в SVG
+//     // text-decoration-color: #D41443;
+//     // color: #D41443;
+
+//     & icon_btn {
+//         // color: #D41443;
+//         fill: currentColor;
+//         // fill: #D41443;
+//     }
+// }
+
+.btn__order-tabl {
+// opacity: 0;
+// visibility: hidden;
+display: none;
+}
 // Закрытие медиа запроса до 767px
-}             
+}   
+
+// ОТКРЫТИЕ медиа запроса до 768px
+@media screen and (min-width: 768px) {
+    .header .container  {
+    height: 87px;
+    // padding: 37px 34px 0;
+    padding-top: 37px;
+    
+    justify-content: space-between;
+    align-items: flex-end;
+    }
+
+    //Tablet BTN
+.btn__order-tabl {
+    display: inline-block;
+    text-align: center;
+    
+    width: 209px;
+    height: 44px;
+  
+    border-radius: 22px;
+    border: 0;
+    
+    background-color: #FFFFFF;
+    color: #D41443;
+  
+    // Левый паддинг измерил вручную
+    padding-left: 56px;
+    padding-right: 48px;
+  
+    margin: 0 auto;
+    margin-bottom: 32px;
+  }
+  
+  .btn__title-tabl {
+   
+  font-weight: 700;
+  //MIXIN Добавить //////////////////////////////
+  font-size: 16px;
+  line-height: 21px;
+  
+  color: #D41443;
+  }
+
+  .btn__order-icon-tabl {
+      width: 8px;
+      height: 10px;
+      margin-left: 27px;
+      fill: currentColor;
+  }
+}
+
+// ОТКРЫТИЕ медиа запроса от 1200px
+@media screen and (min-width: 1200px) {
+    .burger__btn {
+//         opacity: 0;
+// visibility: hidden;
+display: none;
+    }
+}
