--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -3,3 +3,10 @@
     padding: 0 20px;
     margin: 0 auto;
 }
+
+@media screen and (min-width: 768px) {
+    .container {
+        padding: 0 34px;
+        margin: 0 auto;
+    }
+}
