--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -4,14 +4,18 @@
     width: 100vw;
     height: 100vh;
 
-    overflow-y: scroll;
+    padding-top: 60px;
+    text-align: center;
+
+    overflow-y: auto;
 
     top: 0;
-    left: 50%;
 
-    transform: translateX(-50%) translateY(-100%) scale(0);
+    right: 0;
+ 
+    transform: translateX(100%);
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     // background-color: var(--primary-bg-color);
     background-color: #E17992;
@@ -24,7 +28,7 @@
 
 
 .mobile__menu.is-open {
-    transform: translateX(-50%) translateY(0) scale(1);
+    transform: translateX(0);
 
     opacity: 1;
     visibility: visible;
@@ -33,6 +37,14 @@
 @media screen and (min-width: 768px) and (max-width: 1199px){
     .mobile__menu {
     width: 250px;
+    height: 100vh;
+    }
+
+    .mobile__menu.is-open {
+        transform: translateX(0);
+    
+        opacity: 1;
+        visibility: visible;
     }
 }
 
@@ -82,20 +94,29 @@
     margin-bottom: 64px;
 }
 
+.mobile__menu__item {
+    text-decoration: none;
+}
+
 //Mobile BTN
 .btn__order {
-    width: 186px;
+    display: inline-block;
+    text-align: center;
+    
+    width: 209px;
     height: 44px;
   
     border-radius: 22px;
+    border: 0;
     
     background-color: #FFFFFF;
     color: #D41443;
   
     // Левый паддинг измерил вручную
-    padding-left: 52;
-    padding-right: 43px;
+    padding-left: 56px;
+    padding-right: 48px;
   
+    margin: 0 auto;
     margin-bottom: 32px;
   }
   
@@ -108,6 +129,15 @@
   
   color: #D41443;
   }
+
+  .btn__order-icon {
+      width: 8px;
+      height: 10px;
+      margin-left: 27px;
+      fill: currentColor;
+  }
+
+//   ./images/about/about-sprite.svg#icon-Vector-1
   // END Mobile BTN
   
   //Mobile Navigation
@@ -117,6 +147,12 @@
           display: block;
           width: 250px;
           height: 42px;
+
+          text-align: start;
+          
+          padding-left: 21px;
+          padding-top: 12px;
+          padding-bottom: 12px;
   
           border-top: 1px solid #E18298;
   
