--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -42,12 +42,20 @@
 <p class="copyright__text">© 2019 - IceCream. All Rights Reserved.</p>
 </div>
 
-<div class="arrow">
+<!-- <div class="arrow">
     <a href="#top">
     <span></span>
     <span></span>
     <span></span>
 </a>
+</div> -->
+
+<div >
+    <a href="#top" class="arrow">
+        <span></span>
+        <span></span>
+        <span></span>
+    </a>
 </div>
 
 </section>
