--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -46,8 +46,7 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $text-white-color;
-    padding-top: 161px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
   }
 
   &-text {
@@ -79,9 +78,14 @@
 .product-green {
   background-color: $bg-shakes-color;
   border-radius: 24px;
+  padding-top: 161px;
   margin-bottom: 98px;
   margin: 0 10px;
   position: relative;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
 
   &::before {
     content: "";
@@ -101,10 +105,15 @@
 .product-coffee {
   background-color: $bg-coffee-color;
   border-radius: 24px;
+  padding-top: 161px;
   margin-bottom: 130px;
   margin-left: 10px;
   margin-right: 10px;
   position: relative;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
 
   &::before {
     content: "";
@@ -124,10 +133,15 @@
 .product-pink {
   background-color: $bg-hero-color;
   border-radius: 24px;
+  padding-top: 161px;
   margin-bottom: 130px;
   margin-left: 10px;
   margin-right: 10px;
   position: relative;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
 
   &::before {
     content: "";
