добавил адаптивку для героя

--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -1,12 +1,17 @@
 .header {
   padding-top: 6px;
-  z-index: 1;
+  z-index: 10;
+
   // position: absolute;
+  // top: 0;
+  // left: 0;
+  // transform: translateX(15%);
   .header-container {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
     margin: 0 auto;
+
   }
 }
 
@@ -33,10 +38,6 @@
   border: none;
   fill: $text-red-color;
 
-  //   &:hover,
-  //   &:focus {
-  //     fill: $text-white-color;
-  //   }
 }
 .buy {
     width: 160px;
@@ -76,11 +77,8 @@
 
 @media screen and (min-width: 768px) {
   .header {
-    padding-top: 38px;
-
+    padding-top: 37px;
     // .header-container {
-    //     width: 768px;
-    //   padding: 0 34px;
     // }
   }
 
@@ -93,13 +91,6 @@
 }
 
 @media screen and (min-width: 1280px) {
-  // .header {
-  //   .header-container {
-  //     width: 1280px;
-  //     padding-right: 112px;
-  //     padding-left: 46px;
-  //   }
-  // }
   .burger-menu {
     display: none;
   }
