--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,14 +1,18 @@
 .hero {
   background: $bg-hero-color;
-  // padding-top: 96px;
   position: relative;
+
+  .hero-img {
+    position: absolute;
+  right: 0;
+  bottom: 0;
+  }
+  .header-container {
+    position: relative;
+   height: 502px;
+  }
 }
-// .hero-container {
-//   width: 320px;
-//   padding-left: 20px;
-//   padding-right: 20px;
-//   margin: 0 auto;
-// }
+
 .hero-description,
 .counter-list,
 .hero-accent {
@@ -16,7 +20,7 @@
 }
 .hero-title-box {
   position: absolute;
-  z-index: 2;
+  z-index: 5;
   top: 38%;
 }
 .hero-title {
@@ -76,24 +80,24 @@
 }
 .hero-img {
   padding-top: 92px;
-  max-width: 346px;
-  height: 421;
-  margin-left: auto;
+  width: 346px;
+    margin-left: auto;
   display: flex;
-  justify-content: center;
+    padding-right: 32px;
+  
+  justify-content: flex-end;
   background-image: radial-gradient(
-    circle closest-corner at 60% 50%,
+    circle closest-corner at 70% 50%,
     $text-pink-color 65%,
     transparent 50%
   );
-  position: relative;
+ 
 
   .hero-main-img {
     display: inline-block;
     max-width: 177px;
     height: auto;
-    margin-left: 10%;
-  }
+     }
 }
 
 // @media screen and (min-width: 480px) {
@@ -104,6 +108,10 @@
 
 @media screen and (min-width: 768px) {
   .hero {
+     .hero-img {
+    right: auto;
+    left: 199px;
+        }
     .header-container {
       padding: 0 34px;
       display: flex;
@@ -122,12 +130,25 @@
     margin-top: 19px;
   }
   .hero-title-box {
-    position: relative;
-    margin-top: 102px;
+       margin-top: 0;
   }
   .hero-img {
-    max-width: 324px;
-    height: 368;
+    padding: 0;
+    padding-right: 110px;
+    width: 324px;
+    height: 368px;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    background-image: radial-gradient(circle closest-corner at 64% 45%, #ffa5ba 68%, transparent 50%);
+  
+  .hero-main-img {
+    
+    margin-left: 0;
+    max-width: 143px;
+  }
   }
   .hero-title {
     max-width: 162px;
@@ -141,16 +162,12 @@
   .hero-description {
     align-items: flex-end;
     display: flex;
-    // .hero-item {
-    //   align-items: flex-end;
-    // }
+    
   }
   .hero-description-section {
     padding-bottom: 6px;
     max-width: 114px;
-    // display: flex;
-    // align-items: flex-end;
-    .hero-description-text {
+        .hero-description-text {
       font-weight: 400;
       font-size: 8px;
       line-height: 10px;
@@ -172,6 +189,9 @@
     fill: $text-red-color;
   }
   .counter-box {
+    position: absolute;
+    bottom: 0;
+    right: 43px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -190,6 +210,7 @@
     font-size: 8px;
     line-height: 10px;
     color: $text-white-color;
+    text-align: right;
     .counter-number {
       font-family: 'Titan One', sans-serif;
       font-weight: 400;
@@ -197,14 +218,21 @@
       line-height: 32px;
       letter-spacing: 0.04em;
       color: $text-red-color;
-    }
+        }
+  }
+  .hero-accent-img {
+    z-index: 3;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .hero {
+    .hero-img {
+    
+    left: 286px;
+        }
     .header-container {
-      width: 1280px;
+      height: 665px;
       padding: 0 112px;
     }
   }
@@ -229,12 +257,18 @@
   }
 
   .hero-title-box {
-    position: relative;
-    margin-top: 171px;
+    top: 171px;
   }
   .hero-img {
-    max-width: 538px;
-    // height: 368;
+    width: 538px;
+    height: 613px;
+    padding-right: 183px;
+    background-image: radial-gradient(circle closest-corner at 63% 45%, #ffa5ba 65%, transparent 50%);
+  
+   .hero-main-img {
+    margin-left: 119px;
+    max-width: 236px;
+  } 
   }
   .hero-title {
     max-width: 277px;
@@ -272,6 +306,9 @@
   .arrow {
     width: 10px;
     height: 10px;
+  }
+  .counter-box {
+    right: 112px;
   }
   .counter-list {
     margin-bottom: 109px;
