добавлены цвета фона в переменные, transition для кнопки

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -55,10 +55,10 @@
       background-color: var(--bg-header-hero);
     }
     &--ice-coffee {
-      background-color: #f0d1a5;
+      background-color: var(--bg-beige-color);
     }
     &--milkshakes {
-      background-color: #c2e297;
+      background-color: var(--bg-green-color);
       @media screen and(max-width:767px) {
         margin-bottom: 0;
       }
@@ -315,16 +315,19 @@
 
     &:hover, &:focus{
       background-color: var(--bg-btn-dark-hover);
+      cursor: pointer;
+      transition: background-color 250ms linear;
 
     }
   }
 
   .products__icon {
     fill: var(--bg-btn-dark);
-
+    transition: fill 250ms linear;
     .products__button:hover &,
     .products__button:focus &{
       fill:var(--color-design-white);
+      
     }
 
  }
