--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,16 +1,16 @@
-<section class="products font-heading" id="products">
+<section class="products" id="products">
     <div class="products-container" >
-        <span>100% natural</span>
-        <h1>Products</h1>
+        <span class="subtitle">100% natural</span>
+        <h2 class="title">Products</h2>
         <ul class="products-cards">
             <li class="products-cards-icecream">
-                <h2 class="products-after products-icecream">ice cream</h2>
+                <h3 class="products-after products-icecream subtitle">ice cream</h3>
                 
                 <p class="products-description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                     aliqua facilisis.
                 </p>
-                <button class="products-description-details">
+                <button class="products-description-button">
                     
                     <img src="./images/products/arrow-right.png" alt="">
 
@@ -18,25 +18,25 @@
                
             </li>
             <li class="products-cards-icecoffee">
-                <h2 class="products-after products-icecoffee">ice coffee</h2>
+                <h3 class="products-after products-icecoffee subtitle">ice coffee</h3>
                   
                     <p class="products-description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                     aliqua facilisis.
                     </p>
 
-                    <button class="products-description-details">
+                    <button class="products-description-button">
                     <img src="./images/products/arrow-right.png" alt="">
                     </button>
                  
             </li>           
             <li class="products-cards-milkshake">
-                <h2 class="products-after products-milkshake">milk-shakes</h2>
+                <h3 class="products-after products-milkshake subtitle">milk-shakes</h3>
                 <p class="products-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.
                 </p>
-                <button class="products-description-details">
+                <button class="products-description-button">
                 <img src="./images/products/arrow-right.png" alt="">
                    
                 </button>
