--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -34,5 +34,5 @@
         <a class="contact-tel link" href="+61 (0) 383 766 284">+61 (0) 383 766 284</a>
     </p>
 
-    <p class="end-text-footer line-footer">© 2019 - IceCream. All Rights Reserved.</p>
+    <p class="end-text-footer line-footer">&copy; 2019 - IceCream. All Rights Reserved.</p>
 </section>
