--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,3 +1,35 @@
-<section>
-    
-</section>
+
+<section class="about">
+    <div class="container">
+        <div>
+            <p class="label">tradition and love</p>
+            <h2 class="title">how it’s made?</h2>
+        </div>
+
+    </div>
+    <div class="box-wrap">
+        <div>
+            <source srcset="./images/img-advantages/cow-desctop.png 1x, ./images/img-advantages/cow-desctop@2x.png 2x"
+                    media="(min-width:1200px)">
+
+            <source srcset="./images/img-advantages/cow-tablet.png 1x, ./images/img-advantages/cow-tablet@2x.png 2x"
+                    media="(min-width:768px)">
+
+            <source srcset="./images/img-advantages/cow-mobile.png 1x, ./images/img-advantages/cow-mobile@2x.png 2x">
+
+            <img class="gallery--img" src="./images/img-advantages/cow-mobile.png" alt="photo collage">
+        </div>
+        <div class="info-box">
+            <b>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
+                egestas eros. Maecenas eleifend erat at justo fringilla.</b>
+            <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
+                placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+                tincidunt.
+                &nbsp;
+                Aliquam erat volutpat. Aenean accumsan.</p>
+            <button type="button">Franchise</button>
+        </div>
+
+    </div>
+
+    </section>
