хедер + мобильное меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,12 @@
 <header class="header">
     <div class="container">
-        <nav class="navigation">
+        <div class="logo-block">
             <a class="logo-link link" href="./index.html">
                 <img class="logo-img" src='./images/header/desktop/1x/header-logo-1.png' alt="logo">
             </a>
+        </div>
+        <div class="navigaton-block">
+        <nav class="navigation">
             <ul class="navigation-list list">
                 <li class="navigation-list-item">
                     <a class="navigation-list-link current-tablet-desktop link" href="./index.html">Home</a>
@@ -22,13 +25,18 @@
                 </li>
             </ul>
         </nav>
-        <button type="button" class="burger-btn" data-menu-button>
+        </div>
+        <div class="btns-block">
+        <div class="burger-block">
+                <button type="button" class="burger-btn" data-menu-button>
             <svg class="burger-icon">
                 <use href="./images/icons/symbol-defs.svg#icon-burger"></use>
             </svg>
         </button>
-        <div class="buy-btn">
+        </div>
+        <div class="buy-btn-block">
             <button class="header-btn" type="button" data-modal-open>Buy now ></button>
+        </div>
         </div>
         
         </div>
