--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -19,36 +19,39 @@
     width: 1200px;
   }
 
+
   .header & {
+    box-sizing: border-box;
+    width: 100%;
     display: flex;
     position: absolute;
     z-index: 2;
     flex-direction: row;
-    align-items: center;
-    padding-top: 25px;
-    height: 50px;
-    overflow: visible;
+    align-items: center;  
+    
 
-    @media screen and (max-width: 480px) {
-      overflow: visible;
+    @media screen and (min-width: 320px) {
+      height: 80px;
       justify-content: space-between;
-      padding-top: 6px;
+      padding-top: 25px;
+      padding-bottom: 25px;
     }
+    
     @media screen and (min-width: 768px) {
-      height: 90px;
-      padding-top: 20px;
-      padding-bottom: 20px;
+      height: 110px;
+      justify-content: space-between;
+      padding-top: 38px;
       padding-right: 34px;
-      padding: 34px;
+      padding: 34px;  
     }
 
     @media screen and (min-width: 1200px) {
       position: absolute;
       z-index: 2;
-      height: 75px;
-      padding-top: 25px;
-      padding-right: 0px;
-      padding-left: 75px;
+      height: 105px;
+      padding-top: 52px;
+      padding-right: 75px;
+      padding-left: 46px;
     }
   }
 
@@ -92,3 +95,4 @@
     }
   }
 }
+
