--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,44 +1,39 @@
-//@for $var from start to end {
 
 .header {
   background-color: $accent-background-color;
-
-  //width: 1200px;
-  //height: 108px;
-  //box-sizing: border-box;
 }
 
-.burger-icon {
-  width: 20px;
-  height: 12px;
-}
-
-.navigation {
+.logo-block {
   display: flex;
   align-items: center;
-  padding-top: 38px;
-  justify-content: center;
 }
+.navigation-block {
+  display: flex;
+  align-items: center;  
+}
+.navigation {
+  display: flex;
 
+}
 .navigation-list {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 90px;
-  margin-right: 90px;
-
+  
   @media screen and (max-width: 1199px) {
     display: none;
   }
 }
-
+.navigation-list-item {
+  display: flex;
+  flex-wrap: nowrap;
+}
 .navigation-list-item:not(:last-child) {
-  margin-right: 35px;
+margin-right: 35px;
 }
 
 .navigation-list-link {
   display: flex;
-  flex-wrap: nowrap;
   @include font($fs: 16px, $fw: 700, $lh: 21px, $ls: 0.04em);
   color: $text-color;
 
@@ -52,6 +47,20 @@
   color: $accent-color;
 }
 
-.buy-btn {
-  padding-top: 38px;
+
+.btns-block {
+  display: flex;
+  align-items: center;
+}
+
+.burger-block {
+  display: flex;
+  
+}
+.buy-btn-block {
+  margin-left: 30px;
+}
+.burger-icon {
+  width: 20px;
+  height: 12px;
 }
