--- a/src/partials/mobile.html
+++ b/src/partials/mobile.html
@@ -1,15 +1,12 @@
 <!-- Mobile-menu -->
-<div class="mobile-menu backdrop is-hidden">
+<div class="mobile-menu" data-menu>
     <div class="mobile-menu-block-svg">
          <svg class="mobile-menu-close-icon">
              <use href="./images/icons/symbol-defs.svg#icon-close"></use>
          </svg>
         </div>     
-    <button class="mobile-menu-button" type="button">
-        Buy now
-        <svg class="mobile-menu-vector-icon">
-            <use href="./images/icons/symbol-defs.svg#icon-mobile-menu-button-vector"></use>
-        </svg>
+    <button class="mobile-menu-button" type="button" data-menu-button>
+        Buy now  >
     </button>
     <ul class="mobile-menu-nav">
         <li class="mobile-menu-nav-item mobile-menu-first-item">
