--- a/src/sass/layout/_mobile.scss
+++ b/src/sass/layout/_mobile.scss
@@ -1,11 +1,36 @@
 // Стили для mobile-menu
 
 .mobile-menu {
-  width: 250px;
-  height: 100vh;
-  padding-top: 23px;
-  background-color: $mobile-background-color;
-  box-shadow: (-8px 0px 20px rgba(0, 0, 0, 0.25));
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: column;
+    position: fixed;
+    width: 100%;
+    max-width: 255px;
+    height: 100vh;
+    top: 0;
+    left: 50%;
+    transform: translateX(-300%) translateY(0%);
+    visibility: hidden;
+    pointer-events: none;
+    overflow: scroll;
+    z-index: 3;
+
+    padding: 48px 40px;
+    background-color: $accent-background-color;
+    transition: transform $time-hover cubic-bezier(0.4, 0, 0.2, 1),
+    visibility $time-hover cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: (-8px 0px 20px rgba(0, 0, 0, 0.25));
+
+    &.is-open {
+        transform: translateX(-225%) translateY(0%);
+        visibility: visible;
+        pointer-events: visible;
+    }
+
+    @media screen and (min-width: 1199px) {
+        display: none;
+    }
 }
 
 .mobile-menu-close-icon {
@@ -24,8 +49,7 @@
 
 .mobile-menu-button {
   display: flex;
-  width: 100%;
-  max-width: 209px;
+  width: 186px;
   height: 44px;
   margin: 0 auto 19px;
 
