--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -2,6 +2,15 @@
   background-color: var(--primary-bcg-color);
   padding-top: 38px;
   padding-bottom: 145px;
+  @media screen and (min-width: 772px) {
+    padding-top: 66px;
+  }
+}
+
+.advantages-list {
+  @media screen and (min-width: 772px) {
+    display: flex;
+  }
 }
 
 .advantages-list-item {
@@ -18,18 +27,18 @@
     background-color: var(--primary-bcg-color);
     background-repeat: no-repeat;
     background-image: url('../images/advantages/icon1.png');
+    @media screen and (min-width: 772px) {
+      margin-bottom: 36px;
+    }
   }
-  /* &.721::before {
-  }
-  &.16kg::before {
-  background-image: url('../images/advantages/icon2.png');
-  }
-  &.84::before {
-  background-image: url('../images/advantages/icon3.png');
-  } */
 }
 
-/* .checkbox:checked + & { */
+.advantages-list-item {
+  @media screen and (min-width: 772px) {
+    margin-top: 0;
+    margin-left: 60px;
+  }
+}
 
 .advantages-item-title {
   font-family: Titan One;
@@ -40,6 +49,11 @@
   color: var(--dark-accent-color);
   margin-top: 0;
   margin-bottom: 20px;
+  @media screen and (min-width: 772px) {
+    font-size: 48px;
+    line-height: 55px;
+    margin-bottom: 13px;
+  }
 }
 
 .advantages-item-text {
@@ -48,4 +62,8 @@
   line-height: 170%;
   color: var(--primary-text-color);
   margin: 0;
+  @media screen and (min-width: 772px) {
+    font-size: 14px;
+    line-height: 174%;
+  }
 }
