--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -6,12 +6,12 @@
                 <h3 class="advantages-item-title 721">721</h3>
                 <p class="advantages-item-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages-list-item">
-                <h3 class="advantages-item-title 16kg">16KG</h3>
+            <li class="advantages-list-item 16kg">
+                <h3 class="advantages-item-title">16KG</h3>
                 <p class="advantages-item-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages-list-item">
-                <h3 class="advantages-item-title 84">84</h3>
+            <li class="advantages-list-item 84">
+                <h3 class="advantages-item-title">84</h3>
                 <p class="advantages-item-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul>
