Добавляє стилі на заголовок

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,11 +2,14 @@
 
     <div class="container">
 
-        <p class="footer__text">homemade ice cream made</p>
-        <p class="footer__slog">with passion</p>
+        <div class="footer__text">         
+            <p class="footer__text-title">homemade ice cream made</p>
+            <p class="footer__text-slog">with passion</p>
+        </div>
 
-        <ul class="footer__social list">
-            <li class="footrr__social-list">
+        <div class="">
+            <ul class="footer__social list">
+            <li class="footer__social-list">
                 <a class="footer__social-link" href="">
                     <div class="footer__social-item">
                         <svg class="footer__social-icon">
@@ -15,7 +18,7 @@
                     </div>
                 </a>
             </li>
-            <li class="footrr__social-list">
+            <li class="footer__social-list">
                 <a class="footer__social-link" href="">
                     <div class="footer__social-item">
                         <svg class="footer__social-icon">
@@ -24,7 +27,7 @@
                     </div>
                 </a>
             </li>
-            <li class="footrr__social-list">
+            <li class="footer__social-list">
                 <a class="footer__social-link" href="">
                     <div class="footer__social-item">
                         <svg class="footer__social-icon">
@@ -32,13 +35,15 @@
                         </svg>
                     </div>
                 </a>
-            </li>
-                                
+            </li>                     
         </ul>
     
-    <span>Feel free to contact<a href="tel:+610383766284"> +61 (0) 383 766 284 </a></span>
-    
-   <span>&#xa9; 2019 - IceCream. All Rights Reserved. </span>
-
+        <span class="footer__contakt">Feel free to contact<a class="footer__tel link" href="tel:+610383766284"> +61 (0) 383 766 284 </a></span>
+        </div>
     </div>
+    
+    <div>
+        <span>&#xa9; 2019 - IceCream. All Rights Reserved. </span>
+    </div>
+
 </footer>
