--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,15 +1,22 @@
 .footer{
   background-color: var(--bg-section);
-    
+
   &__text{
+    outline: black 1px solid;
+    max-width:234px;
+    margin-bottom:43px;
+  } 
+
+  &__text-title{
    font-family:var(--text-secondary);
    font-size: 18px;
    line-height: 1.667;
    text-transform: uppercase;
    color: var(--color-subtitle);
+   padding-bottom:30px;
   }
 
-  &__slog{
+  &__text-slog{
    font-family:var(--text-secondary);
    font-size: 34px;
    line-height: 1.147;
@@ -17,6 +24,17 @@
    text-transform: uppercase;
    color:var(--color-design-main);
   }
+
+  &__social{
+    display: flex;
+    margin-left: 0 auto;
+      }
+
+      &__social-list:not(:last-child){
+        margin-right:30px;
+      }
+
+  
     
   &__social-link {
    display: flex;
@@ -37,10 +55,30 @@
       color:var(--color-design-white)
     }
   }
-     
-  &__social-icon {
-    width: 18.8px;
-    height: 18.8px;
-    fill: currentColor;
+
+  &__contakt{
+    outline: black 1px solid;
+    display: flex;
+    font-family: DM Sans;
+font-style: normal;
+font-weight: bold;
+font-size: 12px;
+line-height: 186%;
+/* or 22px */
+
+text-align: right;
+
+color: #000000;
   }
+     
+  &__social-item {
+    width: 20px;
+    height: 20px;
+  }
+  &__social-icon {
+      width: 20px;
+      height: 20px;
+      fill: currentColor;
+  }
+
 }
