--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -62,7 +62,7 @@
           Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
           suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
           tincidunt. 
-         <p class="about-description"> Aliquam erat volutpat. Aenean accumsan.</p>
+         <p class="about-description paragraph"> Aliquam erat volutpat. Aenean accumsan.</p>
         </p>
 
         <button type="button" class="button-about" data-modal-open>
