--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -23,7 +23,7 @@
   left: 0px;
   width: 54px;
   height: 40px;
-
+}
 .customer-card-text {
   background-image: repeating-linear-gradient(
     to bottom,
