--- a/src/partials/mobile.html
+++ b/src/partials/mobile.html
@@ -1,9 +1,11 @@
 <!-- Mobile-menu -->
 <div class="mobile-menu" data-menu>
     <div class="mobile-menu-block-svg">
+        <button class="close-button" type="button" data-menu-close>
          <svg class="mobile-menu-close-icon">
              <use href="./images/icons/symbol-defs.svg#icon-close"></use>
          </svg>
+        </button>
         </div>     
 
     <button class="mobile-menu-button" type="button">
