--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,7 @@
                     <li class="social-link-list-item">
                         <a class="social-link" href="#" target="_blank">
                             <svg class="social-link-icon git">
-                                <use class="git" href="./images/sprite.svg#icon-github"></use>
+                                <use href="./images/sprite.svg#icon-github"></use>
                             </svg>
                         </a>
                     </li>
