--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -13,4 +13,6 @@
   --bg-secondary-color: #fff6f5;
   --footer-pseudo-color: #E1E1E1;
   --social-link-bg-color: #FEA5BB;
+  --mobile-menu-bg-color: #E17992;
+  --mobile-menu-pseudo-color: #E18298;
 }
