--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -83,12 +83,12 @@
         </ul>
         <div class="locations__buttons">
             <button type="button" class="button--secondary">Our Locations
-                <svg class="icon-vector-right">
+                <svg class="button__icon-right">
                     <use href="./images/svg/sprites.svg#icon-vector-right"></use>
                 </svg>
             </button>
-            <button type="button" class="button">Franchise
-                <svg class="icon-vector-right">
+            <button type="button" class="button--icon">Franchise
+                <svg class="button__icon-right">
                     <use href="./images/svg/sprites.svg#icon-vector-right"></use>
                 </svg>
             </button>
