mobile products done

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,19 +1,37 @@
-.product-ice-cream-title {
-  padding-bottom: 140px;
-  text-align: center;
+.products{
+  padding-top: 122px;
+  padding-bottom: 98px;
+  @media screen and(min-width:768px) {
+    padding-bottom: 122px;
+  }
+  @media screen and(min-width:1280px) {
+    padding-bottom: 244px;
+  }
 }
 
-.product-benefit {
+
+.products-ice-cream-title {
+  margin-bottom: 140px;
+  text-align: center;
+  @media screen and(min-width:768px) {
+    padding-bottom: 150px;
+  }
+  @media screen and(min-width:1280px) {
+    padding-bottom: 259px;
+  }
+}
+
+.products-benefit {
+  margin-bottom: 15px;
 font-family: var(--title-font);
 font-weight: 400;
 font-size: 18px;
 line-height: 1.167;
 text-transform: uppercase;
-margin-bottom: 15px;
 color: var(--label-color);
 }
 
-.product-title {
+.products-title {
   font-family: var(--title-font);
   font-weight: 400;
   font-size: 34px;
@@ -24,51 +42,73 @@ color: var(--label-color);
   color: var(--main-dark-color);
 }
 
-.product-item {
+.products-item {
+  
   width: 280px;
   padding-top: 160px;
   padding-bottom: 40px;
   border-radius: 24px;
   text-align: center;
   // outline: solid 1px red;
+
+  &:not(:last-child){
+    margin-bottom: 120px;
+  }
 }
 
-.color-ice-cream {
-  background-color: var(--bg-hero);
-}
+.ice-cream {
+  background-color: var(--bg-ice-cream);
+&::before {
+  content: '';
+  background-image: url(../images/product/mobile-icecream.png);
+}}
 
-.product-img-ice-cream {
+.ice-coffee {
+  background-color: var( --bg-ice-coffee-cafe);
+}
+.milkshakes {
+  background-color: var( --bg-milkshakes-foodtruck);
+}
+.products-img {
   position: relative;
   margin-bottom: 66px;
   }
 
-.product-title-ice-cream {
+.products-subtitle {
   font-family: var(--title-font);
   font-weight: 400;
   font-size: 20px;
   line-height: 1.15;
   text-transform: uppercase;
   color: var(--text-color-dark-bg);
+
+  &::before{
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 40px;
+    transform: translate(-50%, 0);
+    width: 249px;
+    height: 252px;
+  }
 }
 
-.product-title-ice-cream::before {
+
+.ice-coffee::before {
   content: '';
-  position: absolute;
-  left: 50%;
-  bottom: 40px;
-  transform: translate(-50%, 0);
-  width: 249px;
-  height: 252px;
-  background-image: url(../images/product/mobile-icecream.png);
+  background-image: url(../images/product/mobile-ice-coffee.png);
+}
+.milkshakes::before {
+  content: '';
+  background-image: url(../images/product/mobile-milkshakes.png);
 }
 
-
-.product-svg-ice-cream {
+.products-svg-ice-cream {
   position: relative;
   margin-bottom: 30px;
 }
 
-.product-ice-cream-text {
+.products-ice-cream-text {
   font-family: var(--text-font);
   font-weight: 700;
   font-size: 14px;
@@ -79,7 +119,7 @@ color: var(--label-color);
   color: var(--text-color-dark-bg);
   }
 
-.product-ice-cream-text::before  {
+.products-ice-cream-text::before  {
   content: '';
   position: absolute;
   left: 50%;
