--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,19 @@
 <section class="hero">
     <div class="container hero__container">
         <div class="hero__ice-cream">
-            <img src="./images/png/hero/mobile/ice-cream.png" alt="">
+            <picture>
+                <source srcset="./images/png/hero/descktop/icecream.png 1x, ./images/png/hero/descktop/icecream@2x.png 2x"
+                    media="(min-width:1200px)">
+            
+                <source srcset="./images/png/hero/tablet/icecream.png 1x, ./images/png/hero/tablet/icecream@2x.png 2x"
+                    media="(min-width: 768px)">
+            
+                <source srcset="./images/png/hero/mobile/icecream.png 1x, ./images/png/hero/mobile/icecream@2x.png 2x"
+                    media="(max-width: 767px)">
+            
+                <img src="./images/png/hero/mobile/icecream.png" alt="">
+            </picture>
+            
         </div>
         <h1 class="hero__title">ice cream <br>
              made with <br>
