adds color variables for colorful background

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 100%;
   margin: 0 auto;
-  .hero & {background-color: #FFB8CA;
+  .hero & {background-color: var(--colorful-bg-color-one);
     position: relative;
   }
 
