--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,6 +10,9 @@
   --secondary-dark-shaded-color: #907e82;
   --primary-light-bg-color: #ffffff;
   --light-shaded-bg-color: #fafafa;
+  --colorful-bg-color-one: #ffb8cA;
+  --colorful-bg-color-two: #f0d1a5;
+  --colorful-bg-color-three: #c2e297;
   --social-link-bg-basic-color: #fea5bb;
   --primary-line-color: #e1e1e1;
   --button-hover-color: #ecebeb;
