Добавлена в герое кнопка"Read-more"

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -20,18 +20,17 @@
          </div>
       </div>
       <div class="hero-wrapper-description">
-         <div class="hero-wrap-read-more">
-         <p class="hero-description">Many countries have their own variations on the theme of ice cream. For example, in Turkey there is dondurma - a gooey
-         kind of ice cream that street vendors tease tourists with. The most popular around the world are ice cream and gelato,
+         <div class="hero-wrap-read-more" data-wrap>
+         <p class="hero-description">Many countries have their own variations on the theme of ice cream. The most popular around the world are ice cream and gelato,
          thanks to which Italy became famous as a country with delicious ice cream. But we will feed you the most fantastically
          delicious ice cream !!!!</p>
-         <button class="hero-icon-close hero-icon">
+         <button class="hero-btn-read-more-close hero-btn-read-more" data-wrap-close>
             <svg class="hero-arrow-icon">
                <use href="./images/sprite.svg#icon-arrow-up"></use>
             </svg>
          </button>
          </div>
-         <button class="hero-icon-open hero-icon">
+         <button class="hero-btn-read-more-open hero-btn-read-more" data-wrap-open>
             <svg class="hero-arrow-icon">
                 <use href="./images/sprite.svg#icon-arrow-right"></use>
             </svg>
