Revert "Merge pull request #42 from Igor-Klyopov/revert-36-css-to-header-desktop"
This reverts commit c40c926afa5f45696381e6b1727cfd0c386b5fb9, reversing
changes made to 615ece5f5eca0a7dd9f032cf9f348763412bc636.

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,25 +33,24 @@
     </a>
 
     <nav class="navigation">
-      <ul class="navigation-list">
+      <ul class="navigation-list list">
         <li class="navigation-item">
-          <a href="./index.html" class="navigation-link">Home</a>
+          <a href="./index.html" class="navigation-link link current">Home</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">About us</a>
+          <a href="#" class="navigation-link link">About us</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">How it’s made?</a>
+          <a href="#" class="navigation-link link">How it’s made?</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Our products</a>
+          <a href="#" class="navigation-link link">Our products</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Contact</a>
+          <a href="#" class="navigation-link link">Contact</a>
         </li>
       </ul>
     </nav>
-
     <button type="button" class="burger-button" data-menu-button>
       <svg class="burger-icon">
         <use href="./images/icon-sprite.svg/#icon-burger"></use>
