--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -164,6 +164,73 @@
     height: 12px;
     padding: 0;
   }
+  .mobile-close-button {
+    display: none;
+  }
+  .button-primary-modal {
+    display: none;
+  }
+  .mobile-menu-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .burger-button {
+    display: none;
+  }
+  .header {
+    margin-top: 37px;
+    display: flex;
+    height: 90px;
+    padding: 0;
+    flex-direction: column;
+    background: #ffb8ca;
+  }
+  .header-container {
+    width: 1050px;
+    padding: 0 75px;
+    display: flex;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .logotype {
+    width: 199px;
+    height: 50px;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+    margin-left: 110px;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: center;
+    padding-left: 0;
+  }
+  .navigation-item:not(:last-child) {
+    margin-right: 35px;
+  }
+  .navigation-link {
+    position: absolute;
+    display: contents;
+    width: 70px;
+    height: 21px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 21px;
+    align-items: center;
+    color: var(--primary-light-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus,
+    &.current {
+      color: var(--accent-color);
+    }
   .mobile-menu.is-open {
     transform: translateX(-50%) translateY(0%);
   }
