adds variable colors to hero and gallery

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  background: linear-gradient(to bottom, #fff5f6 40%, #ffffff 40%);
+  background: linear-gradient(to bottom, var(--secondary-bg-color) 40%, var(--primary-light-bg-color) 40%);
 }
 
 .gallery-container {
