--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -12,7 +12,7 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  color: #ffffff;
+  color: var(--primary-light-color);
 }
 h1 {
   margin: 0;
@@ -36,13 +36,13 @@ h1 {
   align-items: center;
   text-align: center;
   color: var(--accent-color);
-  background-color: #ffffff;
+  background-color: var(--primary-light-bg-color);
   border-radius: 20px;
 }
 
 .info-button:hover,
 .info-button:focus {
-  color: #ffffff;
+  color: var(--primary-light-color);
   background-color:var(--accent-color);
 }
 
