Revert reverted commit

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -231,6 +231,7 @@
     &.current {
       color: var(--accent-color);
     }
+  }
   .mobile-menu.is-open {
     transform: translateX(-50%) translateY(0%);
   }
