--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -210,8 +210,12 @@
     align-items: center;
     padding-left: 0;
   }
-  .navigation-item:not(:last-child) {
-    margin-right: 35px;
+  .navigation-item {
+    white-space: nowrap;
+
+    &:not(:last-child) {
+      margin-right: 35px;
+    }
   }
   .navigation-link {
     position: absolute;
