--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -4,10 +4,14 @@
     height: 100%;
     max-height: 502px;
     background-color: var(--mobile-menu-bg-color);
-
+    box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
     padding-top: 60px;
 
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 50%;
+
+    transform: translateX(-44%);
 
 
     &-btn {
@@ -59,26 +63,20 @@
 .menu-list-item {
     padding-left: 21px;
     border-top: 1px solid var(--mobile-menu-pseudo-color);
-
-    .menu-list-item:last-child {
-        border-bottom: 1px solid var(--mobile-menu-pseudo-color);
-    }
 }
 
 .menu-close-btn {
-    width: 30px;
-    height: 30px;
     background-color: transparent;
     border: none;
+    padding: 0;
+}
+
+.menu-close-icon {
+    width: 30px;
+    height: 30px;
+    fill: var(--white);
 
     position: absolute;
     top: 15px;
     right: 18px;
-}
-
-.menu-close-icon {
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    fill: var(--white);
 }
