add svg to buttons

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,17 @@
 <footer>
-<<<<<<< Updated upstream
     <div class="container">
       <ul class="foot_button">
-        <li> <button type="button" class="foot_button-location">Our Locations  ></button></li>
-        <li> <button type="button" class="foot_button-franchise">Franchise   ></button></li>
+        <li> <button type="button" class="foot_button-location">Our Locations                    <svg class="button_sign-white">
+                      <use href="./images/sprite.svg#icon-line"></use>
+                    </svg>
+                </button>
+        </li>
+        <li>    <button type="button" class="foot_button-franchise">Franchise       
+                    <svg class="button_sign-red">
+                      <use href="./images/sprite.svg#icon-line"></use>
+                    </svg>
+                </button>
+        </li>
 
 
      </ul>
@@ -51,54 +59,4 @@
        </div>
   
 </footer>
-=======
-    <div>
-      <ul class="foot-buttons">
-        <li> <button class="button-location">Our Locations  ></button></li>
-        <li> <button class="button-franchise">Franchise  ></button></li>
-
-
-      </ul>
-      <h2 class="foot-header">with passion</h2>
-      <p class="pre-header">homemade ice creame made</p>
-    </div>
-    <div>
-      <ul class="social-links">
-        <li class="social-links-icons"> <a href="#">
-            <svg class="icon">
-              <use href="#">
-
-              </use>
-            </svg>
-          </a></li>
-        <li class="social-links-icons"> <a href="#">
-            <svg class="icon">
-              <use href="#">
-
-              </use>
-            </svg>
-          </a></li>
-        <li class="social-links-icons"><a href="#">
-            <svg class="icon">
-              <use href="#">
-              </use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <address id="contacts">
-      <span class="phone-description ">Feel free to contact</span>
-      <a href="tel:+61(0)383766284" class="phone">+61 (0) 383 766 284 </a>
-
-    </address>
-
-    <div class="foot-sign">
-      <span class="text">© 2019 - IceCream. All Rights Reserved.</span>
-    </div>
-  </footer>
->>>>>>> Stashed changes
-
-
-
+  
