--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -20,7 +20,8 @@
       ){
           margin-bottom: 0;
       }
-      &-location{
+    }
+      .foot_button-location{
         font-family: DM Sans;
         font-size: 16px;
         font-style: normal;
@@ -35,7 +36,16 @@
         color: $white-color;
 
       }
-      &-franchise{
+      
+    .button_sign-white{
+        stroke:$white-color;
+        margin-left: 5px;
+        width: 7px;
+        height: 11px;
+    }
+
+      
+      .foot_button-franchise{
         font-family: DM Sans;
         font-size: 16px;
         font-style: normal;
@@ -49,14 +59,20 @@
         border-radius: 22px;
         color: $accent-red-color;
       }
-      &-franchise:hover{
+      .foot_button-franchise:hover{
         background-color:$icon-bkg-color2;
         color: $accent-red-color;
       }
-      &-franchise:focus{
+      .foot_button-franchise:focus{
         background-color:$icon-bkg-color2;
         color: $accent-red-color;
       }
+    
+    .button_sign-red {
+        stroke:$accent-red-color;
+        margin-left: 8px;
+        width: 7px;
+        height: 10px;
     }
     .foot-title{
         width: 234px; 
@@ -209,6 +225,11 @@
 
     }
 }
+    // .button_sign-white{
+    //     stroke:$white-color;
+    //     width: 7px;
+//     //     height: 10px;
+// }
     .foot_main{
         display: flex;
         justify-content: space-between;
@@ -329,6 +350,11 @@
         height: 44px;
 
     }
+}
+.button_sign-white{
+    stroke:$white-color;
+    width: 7px;
+    height: 10px;
 }
 .foot_main{
     display: flex;
