сделал героя и спозоционировал хедер

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -109,11 +109,13 @@
     <div class="counter-box">
       <ul class="counter-list">
         <li class="counter-item">
+          <div class="counter-circle"></div>
           <p class="counter-description">
             <span class="counter-number">16</span> cafes
           </p>
         </li>
         <li class="counter-item">
+          <div class="counter-circle"></div>
           <p class="counter-description">
             <span class="counter-number">23</span> food trucks
           </p>
