--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -1,17 +1,14 @@
 .header {
-  padding-top: 6px;
+    padding-top: 6px;
   z-index: 10;
-
-  // position: absolute;
-  // top: 0;
-  // left: 0;
-  // transform: translateX(15%);
+  width: 100%;
+   position: absolute;
+ 
   .header-container {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
     margin: 0 auto;
-
   }
 }
 
