--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -9,7 +9,7 @@
   }
   .header-container {
     position: relative;
-   height: 502px;
+      height: 502px;
   }
 }
 
@@ -115,6 +115,7 @@
     .header-container {
       padding: 0 34px;
       display: flex;
+      height: 399px;
     }
   }
   .hero-description,
@@ -130,6 +131,7 @@
     margin-top: 19px;
   }
   .hero-title-box {
+    top: 102px;
        margin-top: 0;
   }
   .hero-img {
@@ -204,6 +206,20 @@
       margin-bottom: 13px;
     }
   }
+  .counter-item {
+    position: relative;
+  }
+  .counter-circle {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: $text-white-color;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(45%) translateY(-10%);
+
+  }
   .counter-description {
     max-width: 51px;
     font-weight: 400;
@@ -211,6 +227,8 @@
     line-height: 10px;
     color: $text-white-color;
     text-align: right;
+    z-index: 7;
+    position: relative;
     .counter-number {
       font-family: 'Titan One', sans-serif;
       font-weight: 400;
@@ -227,6 +245,9 @@
 
 @media screen and (min-width: 1280px) {
   .hero {
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
     .hero-img {
     
     left: 286px;
@@ -263,7 +284,7 @@
     width: 538px;
     height: 613px;
     padding-right: 183px;
-    background-image: radial-gradient(circle closest-corner at 63% 45%, #ffa5ba 65%, transparent 50%);
+    background-image: radial-gradient(circle closest-corner at 60% 43%, #ffa5ba 67%, transparent 50%);
   
    .hero-main-img {
     margin-left: 119px;
@@ -315,6 +336,10 @@
     .counter-item:not(:last-child) {
       margin-bottom: 30px;
     }
+  }
+  .counter-circle {
+    width: 30px;
+    height: 30px;
   }
   .counter-description {
     max-width: 92px;
