добавляє стилі копірайта

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,10 @@
 .footer{
   background-color: var(--bg-section);
 
+   .container{
+    margin-bottom:49px;
+  }
+
   &__text{
     outline: black 1px solid;
     max-width:234px;
@@ -25,16 +29,21 @@
    color:var(--color-design-main);
   }
 
+  /*&__contakt{
+    display:flex;
+    justify-content:flex-end;
+  }*/
+
   &__social{
+    outline: black 1px solid;
     display: flex;
-    margin-left: 0 auto;
-      }
+    justify-content:flex-end;
+    margin-bottom:46px;
+  }
 
-      &__social-list:not(:last-child){
-        margin-right:30px;
-      }
-
-  
+  &__social-list:not(:last-child){
+    margin-right:30px;
+  }
     
   &__social-link {
    display: flex;
@@ -54,31 +63,34 @@
       background-color:var(--color-design-main);
       color:var(--color-design-white)
     }
-  }
-
-  &__contakt{
-    outline: black 1px solid;
-    display: flex;
-    font-family: DM Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 12px;
-line-height: 186%;
-/* or 22px */
-
-text-align: right;
-
-color: #000000;
-  }
+  } 
      
   &__social-item {
     width: 20px;
     height: 20px;
   }
   &__social-icon {
-      width: 20px;
-      height: 20px;
-      fill: currentColor;
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+  }
+
+  &__contakt-tel{
+    outline: black 1px solid;
+    display: flex;
+    justify-content:flex-end;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.833;
+    color: var(--color-design-black);
+  }
+
+  &__copyright{
+    border-top:1px solid #E1E1E1;
+    height:83px;
+    display:flex;
+    justify-content:center;
+    align-item:center;
   }
 
 }
