--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -214,6 +214,11 @@
 
 
 @media screen and (min-width: 768px) {
+.products {
+    padding-top: 122px;
+    padding-bottom: 112px;
+}
+
 .products-subtitle {
     font-size: 26px;
     line-height: 1.154;
@@ -322,6 +327,11 @@
 }
 
 @media screen and (min-width: 1200px) {
+.products {
+    padding-top: 127px;
+    padding-bottom: 119px;
+}
+
 .products-subtitle {
     font-size: 30px;
     line-height: 1.133;
